--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "homepage": "https://github.com/mikenath223/Project-Todo-List#readme",
   "devDependencies": {
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
+    "file-loader": "^5.1.0",
+    "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
